update submission form

--- a/src/app/pages/sku-management/db-product-submission/approval/approval.component.html
+++ b/src/app/pages/sku-management/db-product-submission/approval/approval.component.html
@@ -10,7 +10,7 @@
         <h2 style="margin: unset">Pengaturan Approval</h2>
       </div>
       <form [formGroup]="approval" class="py-24">
-        <div fxLayout="column" fxFlex="50" fxLayoutAlign="start stretch">
+        <div fxLayout="column" fxFlex="50" fxLayoutAlign="start stretch" fxLayoutGap="16px">
           <mat-form-field class="is-light form-primary">
             <mat-select
               formControlName="user1"
