--- a/src/app/pages/sku-management/product-cashier/submission/edit/edit.component.html
+++ b/src/app/pages/sku-management/product-cashier/submission/edit/edit.component.html
@@ -3,110 +3,84 @@
   fxLayout="column"
   fusePerfectScrollbar
 >
-  <page-content-header contentTitle="Detail Produk Diajukan"></page-content-header>
-  <div
-    *ngIf="onLoad"
-    fxLayout="row"
-    fxLayoutAlign="center center"
-    class="pt-48"
-  >
-    <mat-spinner [strokeWidth]="6" [diameter]="50" color="accent"></mat-spinner>
-  </div>
-  <div class="content p-24" *ngIf="!onLoad">
-    <div class="table-wrapper">
-      <form
-        autocomplete="off"
-        [formGroup]="formProductGroup"
-        (keydown.enter)="$event.preventDefault()"
-      >
-        <mat-tab-group>
-          <mat-tab label="Informasi Produk">
-            <div class="ayo-middle" fxLayout="column">
-              <div class="p-24" fxLayout="column">
-                <mat-form-field fxFlex="100" class="is-light">
-                  <mat-label>Nama Produk</mat-label>
-                  <input
-                    matInput
-                    disabled
-                    [value]="formProductGroup.get('name').value"
-                  />
-                </mat-form-field>
-                <mat-form-field fxFlex="100" class="is-light">
-                  <mat-label>Barcode</mat-label>
-                  <input
-                    matInput
-                    disabled
-                    [value]="formProductGroup.get('barcode').value"
-                  />
-                </mat-form-field>
-
-                <mat-form-field *ngIf="isDetail" fxFlex="100" class="is-light">
-                  <mat-label>Harga Beli</mat-label>
-                  <input
-                    matInput
-                    disabled
-                    [value]="formProductGroup.get('purchase_price').value"
-                  />
-                </mat-form-field>
-                <mat-form-field *ngIf="!isDetail"  fxFlex="100" class="is-light">
-                  <input
-                    matInput
-                    type="tel"
-                    currencyMask
-                    min="0"
-                    placeholder="Harga Beli"
-                    formControlName="purchase_price"
-                  />
-                  <mat-error
-                    *ngIf="
-                      (formProductGroup
-                        .get('purchase_price')
-                        .hasError('required') ||
-                        formProductGroup
-                          .get('purchase_price')
-                          .hasError('min')) &&
-                      formProductGroup.get('purchase_price').touched
-                    "
-                  >
-                    Harga Beli harus diisi
-                  </mat-error>
-                </mat-form-field>
-
-                <mat-form-field *ngIf="isDetail" fxFlex="100" class="is-light">
-                  <mat-label>Harga Jual</mat-label>
-                  <input
-                    matInput
-                    disabled
-                    [value]="formProductGroup.get('selling_price').value"
-                  />
-                </mat-form-field>
-                <mat-form-field *ngIf="!isDetail"  fxFlex="100" class="is-light">
-                  <input
-                    matInput
-                    type="tel"
-                    currencyMask
-                    min="0"
-                    placeholder="Harga Jual"
-                    formControlName="selling_price"
-                  />
-                  <mat-error
-                    *ngIf="
-                      (formProductGroup
-                        .get('selling_price')
-                        .hasError('required') ||
-                        formProductGroup
-                          .get('selling_price')
-                          .hasError('min')) &&
-                      formProductGroup.get('selling_price').touched
-                    "
-                  >
-                    Harga Jual harus diisi
-                  </mat-error>
-                </mat-form-field>
-              </div>
-            </div>
-          </mat-tab>
-        </mat-tab-group>
+  <page-content-header
+    contentTitle="Detail Pengajuan Produk"
+  ></page-content-header>
+  <div class="content p-24">
+    <div class="ayo-main-wrapper mat-white-bg">
+      <div fxLayout="row" fxLayoutAlign="space-between center" class="py-20">
+        <h2 style="margin: unset">Informasi Produk</h2>
+      </div>
+      <form [formGroup]="product" class="py-24">
+        <div
+          fxLayout="column"
+          fxFlex="50"
+          fxLayoutAlign="start stretch"
+          fxLayoutGap="16px"
+        >
+          <mat-form-field class="is-light form-primary">
+            <input
+              matInput
+              type="text"
+              placeholder="Nama Produk"
+              formControlName="name"
+            />
+            <mat-error *ngIf="hasError('name')">
+              Nama Produk harus diisi
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field class="is-light form-primary">
+            <input
+              matInput
+              type="text"
+              placeholder="Barcode"
+              formControlName="barcode"
+            />
+            <mat-error *ngIf="hasError('barcode')">
+              Barcode harus diisi
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field class="is-light form-primary">
+            <input
+              matInput
+              type="text"
+              placeholder="Harga Beli"
+              formControlName="purchase_price"
+            />
+            <mat-error *ngIf="hasError('purchase_price')">
+              Harga Beli harus diisi
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field class="is-light form-primary">
+            <input
+              matInput
+              type="text"
+              placeholder="Harga Jual"
+              formControlName="selling_price"
+            />
+            <mat-error *ngIf="hasError('selling_price')">
+              Harga Jual harus diisi
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div fxLayout="row" fxLayoutGap="30px" class="pt-36">
+          <button
+            mat-raised-button
+            type="button"
+            class="confirmation-button mat-green-800-bg"
+            (click)="submit('approve')"
+          >
+            Setuju
+          </button>
+          <button
+            mat-raised-button
+            type="button"
+            class="confirmation-button"
+            (click)="submit('disapprove')"
+          >
+            Tolak
+          </button>
+        </div>
       </form>
     </div>
   </div>
