--- a/src/app/pages/sku-management/product-cashier/submission/index/index.component.html
+++ b/src/app/pages/sku-management/product-cashier/submission/index/index.component.html
@@ -89,7 +89,11 @@
             prop="selling_price.formatted"
             [width]="100"
           ></ngx-datatable-column>
-          <ngx-datatable-column [width]="100" name="Ada di Databank?">
+          <ngx-datatable-column
+            [width]="100"
+            name="Ada di Databank?"
+            [sortable]="false"
+          >
             <ng-template
               ngx-datatable-cell-template
               let-row="row"
@@ -116,7 +120,12 @@
             >
               <ng-container *ngIf="row.in_databank">
                 <div class="button-row" style="white-space: nowrap">
-                  <button mat-stroked-button class="mr-16" color="primary">
+                  <button
+                    mat-stroked-button
+                    class="mr-16"
+                    color="primary"
+                    (click)="approveProduct(row)"
+                  >
                     Setujui
                   </button>
                   <button
@@ -137,7 +146,7 @@
                     mat-icon-button
                     color="primary"
                     matTooltip="Hapus Produk"
-                    (click)="deleteProduct(row.id)"
+                    (click)="disapproveProduct(row)"
                   >
                     <mat-icon>delete</mat-icon>
                   </button>
