--- a/src/app/pages/sku-management/db-product-submission/dialog/upload-image/upload-image.component.html
+++ b/src/app/pages/sku-management/db-product-submission/dialog/upload-image/upload-image.component.html
@@ -52,7 +52,7 @@
             mat-raised-button
             color="primary"
             (click)="submit()"
-            [disabled]="!files"
+            [disabled]="!files || invalid"
           >
             Pilih
           </button>
