--- a/src/app/pages/sku-management/db-product-submission/edit/edit.component.html
+++ b/src/app/pages/sku-management/db-product-submission/edit/edit.component.html
@@ -214,7 +214,7 @@
                 </div>
               </div>
               <div *ngIf="filesError" class="mat-custom-error">
-                Foto Produk harus dipilih
+                Foto Produk harus diisi
               </div>
             </div>
             <div fxLayout="column" fxFlex="50"></div>
