--- a/src/app/pages/sku-management/db-product-submission/index/index.component.html
+++ b/src/app/pages/sku-management/db-product-submission/index/index.component.html
@@ -148,7 +148,7 @@
                   mat-icon-button
                   color="primary"
                   matTooltip="Hapus Produk"
-                  (click)="deleteProduct(row.id)"
+                  (click)="disapproveProduct(row)"
                 >
                   <mat-icon>delete</mat-icon>
                 </button>
