--- a/src/app/pages/user-management/rca-agent/create/rca-agent-create.component.html
+++ b/src/app/pages/user-management/rca-agent/create/rca-agent-create.component.html
@@ -35,90 +35,87 @@
           </div>
         </div>
 
-        <div class="" formArrayName="areas" *ngFor="let wil of formRcaAgent.get('areas')['controls']; let i = index;">
-          <div [formGroupName]="i">
-            <div class="py-24" fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px"
-              fxLayoutAlign="space-between stretch">
-              <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="National" formControlName="national"
-                  matTooltip="{{getToolTipData(wil.get('national').value, wil.controls['list_national'].value)}}">
-                  <mat-option *ngFor="let item of wil.controls['list_national'].value" [value]="item.id">
-                    {{item.name}}
-                  </mat-option>
-                </mat-select>
-                <mat-error *ngIf="wil.controls['national'].hasError('required') && wil.controls['national'].touched">
-                  National harus diisi
-                </mat-error>
-              </mat-form-field>
-              <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="Zone" formControlName="zone"
-                  matTooltip="{{getToolTipData(wil.get('zone').value, wil.controls['list_zone'].value)}}"
-                  (selectionChange)="generataList('region', wil.get('zone').value, i, 'selection')">
-                  <mat-option *ngFor="let item of wil.controls['list_zone'].value" [value]="item.id">{{item.name}}
-                  </mat-option>
-                </mat-select>
-                <mat-error *ngIf="wil.controls['zone'].hasError('required') && wil.controls['zone'].touched">
-                  Zone harus diisi
-                </mat-error>
-              </mat-form-field>
-              <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="Regional" formControlName="region"
-                  matTooltip="{{getToolTipData(wil.get('region').value, wil.controls['list_region'].value)}}"
-                  (selectionChange)="generataList('area', wil.get('region').value, i, 'selection')">
-                  <mat-option *ngFor="let item of wil.controls['list_region'].value" [value]="item.id">{{item.name}}
-                  </mat-option>
-                </mat-select>
-                <mat-error *ngIf="wil.controls['region'].hasError('required') && wil.controls['region'].touched">
-                  Regional harus diisi
-                </mat-error>
-              </mat-form-field>
-              <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="Area" formControlName="area"
-                  matTooltip="{{getToolTipData(wil.get('area').value, wil.controls['list_area'].value)}}"
-                  (selectionChange)="generataList('salespoint', wil.get('area').value, i, 'selection')">
-                  <mat-option *ngFor="let item of wil.controls['list_area'].value" [value]="item.id">{{item.name}}
-                  </mat-option>
-                </mat-select>
-                <mat-error *ngIf="wil.controls['area'].hasError('required') && wil.controls['area'].touched">
-                  Area harus diisi
-                </mat-error>
-              </mat-form-field>
-              <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="Salespoint" formControlName="salespoint"
-                  matTooltip="{{getToolTipData(wil.get('salespoint').value, wil.controls['list_salespoint'].value)}}"
-                  (selectionChange)="generataList('district', wil.get('salespoint').value, i, 'selection')">
-                  <mat-option *ngFor="let item of wil.controls['list_salespoint'].value" [value]="item.id">
-                    {{item.name}}</mat-option>
-                </mat-select>
-                <mat-error
-                  *ngIf="wil.controls['salespoint'].hasError('required') && wil.controls['salespoint'].touched">
-                  Salespoint harus diisi
-                </mat-error>
-              </mat-form-field>
-              <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="District" formControlName="district"
-                  matTooltip="{{getToolTipData(wil.get('district').value, wil.controls['list_district'].value)}}"
-                  (selectionChange)="generataList('territory', wil.get('district').value, i, 'selection')">
-                  <mat-option *ngFor="let item of wil.controls['list_district'].value" [value]="item.id">
-                    {{item.name}}
-                  </mat-option>
-                </mat-select>
-                <mat-error *ngIf="wil.controls['district'].hasError('required') && wil.controls['district'].touched">
-                  Distrik harus diisi
-                </mat-error>
-              </mat-form-field>
-              <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="Territory" formControlName="territory"
-                  matTooltip="{{getToolTipData(wil.get('territory').value, wil.controls['list_territory'].value)}}">
-                  <mat-option *ngFor="let item of wil.controls['list_territory'].value" [value]="item.id">
-                    {{item.name}}</mat-option>
-                </mat-select>
-                <mat-error *ngIf="wil.controls['territory'].hasError('required') && wil.controls['territory'].touched">
-                  Territori harus diisi
-                </mat-error>
-              </mat-form-field>
-            </div>
-          </div>
+        <div class="py-24" fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px"
+          fxLayoutAlign="space-between stretch">
+          <mat-form-field fxFlex="31%" class="is-light form-primary">
+            <mat-select placeholder="National" formControlName="national">
+              <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field fxFlex="31%" class="is-light form-primary">
+            <mat-select placeholder="Zone" formControlName="zone"
+              (selectionChange)="getAudienceArea('region', formRcaAgent.get('zone').value)">
+              <mat-option *ngFor="let item of list['zone']" [value]="item.id">{{item.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field fxFlex="31%" class="is-light form-primary">
+            <mat-select placeholder="Regional" formControlName="region"
+              (selectionChange)="getAudienceArea('area', formRcaAgent.get('region').value)">
+              <mat-option *ngFor="let item of list['region']" [value]="item.id">{{item.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field fxFlex="31%" class="is-light form-primary">
+            <mat-select placeholder="Area" formControlName="area"
+              (selectionChange)="getAudienceArea('salespoint', formRcaAgent.get('area').value)">
+              <mat-option *ngFor="let item of list['area']" [value]="item.id">{{item.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field fxFlex="31%" class="is-light form-primary">
+            <mat-select placeholder="Salespoint" formControlName="salespoint"
+              (selectionChange)="getAudienceArea('district', formRcaAgent.get('salespoint').value)">
+              <mat-option *ngFor="let item of list['salespoint']" [value]="item.id">{{item.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field fxFlex="31%" class="is-light form-primary">
+            <mat-select placeholder="District" formControlName="district"
+              (selectionChange)="getAudienceArea('territory', formRcaAgent.get('district').value)">
+              <mat-option *ngFor="let item of list['district']" [value]="item.id">{{item.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field fxFlex="31%" class="is-light form-primary">
+            <mat-select placeholder="Territory" formControlName="territory">
+              <mat-option *ngFor="let item of list['territory']" [value]="item.id">{{item.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+
+        <div fxLayout="column">
+          <h4 style="font-weight: bold;">Position Code</h4>
+          <section>
+            <mat-slide-toggle formControlName="isNewPositionCode">New</mat-slide-toggle>
+          </section>
+        </div>
+        <div fxLayout="row" fxFlex="30">
+          <mat-form-field fxFlex="100" class="is-light form-primary">
+            <mat-select placeholder="Existing" [formControl]="existingPositionCode"
+              [disabled]="formRcaAgent.get('isNewPositionCode').value">
+              <mat-option *ngFor="let item of listExistingPositionCodes" [value]=" item.id">{{item.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+
+        <div fxLayout="row" fxFlex="30">
+          <mat-form-field fxFlex="100" class="is-light form-primary">
+            <input matInput type="password" formControlName="password" placeholder="Password">
+            <mat-error
+              *ngIf="formRcaAgent.controls['password'].hasError('required') && formRcaAgent.controls['password'].touched">
+              Password harus diisi
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div fxLayout="row" fxFlex="30">
+          <mat-form-field fxFlex="100" class="is-light form-primary">
+            <input matInput type="password" formControlName="retype_password" placeholder="Retype Password">
+            <mat-error
+              *ngIf="formRcaAgent.controls['retype_password'].hasError('required') && formRcaAgent.controls['retype_password'].touched">
+              Retype Password harus diisi
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div fxLayout="row" fxFlex="30">
+          <mat-error *ngIf="formRcaAgent.hasError('notSame')">
+            Password yang kamu masukan tidak sama!.
+          </mat-error>
         </div>
 
         <div class="confirm pt-24 pb-24" fxLayout="row" fxLayoutGap="20px">
