fixing bug wording account protection

--- a/src/app/pages/device-management/device-recovered/device-recovered.component.html
+++ b/src/app/pages/device-management/device-recovered/device-recovered.component.html
@@ -116,6 +116,7 @@
                 </button>
               </div>
               <div class="p-28" fxLayout="row">
+                <h2>Pemulihan semua Perangkat</h2>
                 <mat-form-field fxFlex="40" class="is-light">
                   <input matInput placeholder="Alasan" type="text" [formControl]="reasonRecovery">
                 </mat-form-field>
