--- a/src/app/pages/sku-management/product-cashier/create/create.component.html
+++ b/src/app/pages/sku-management/product-cashier/create/create.component.html
@@ -23,124 +23,104 @@
     <mat-spinner [strokeWidth]="6" [diameter]="50" color="accent"></mat-spinner>
   </div>
   <div class="content p-24" *ngIf="!onLoad">
-    <div class="table-wrapper">
+    <div class="ayo-main-wrapper mat-white-bg">
+      <div fxLayout="row" fxLayoutAlign="space-between center" class="py-20">
+        <h2 style="margin: unset">Informasi Produk</h2>
+      </div>
       <form
         autocomplete="off"
         [formGroup]="formProductGroup"
         (keydown.enter)="$event.preventDefault()"
+        class="py-24"
       >
-        <mat-tab-group>
-          <mat-tab label="Informasi Produk">
-            <div class="ayo-middle" fxLayout="column">
-              <div class="p-24" fxLayout="column">
-                <div
-                  class="button mb-16"
-                  fxLayout="row wrap"
-                  fxLayoutAlign="space-between center"
-                  (click)="openDialog()"
-                >
-                  <mat-icon class="secondary-text">horizontal_split</mat-icon>
-                  <span class="h5 text-center">SCAN BARCODE</span>
-                </div>
-                <mat-form-field *ngIf="!hasBarcode" fxFlex="100" class="is-light">
-                  <input
-                    matInput
-                    disabled
-                    placeholder="Nama Produk"
-                  />
-                </mat-form-field>
-                <mat-form-field *ngIf="hasBarcode" fxFlex="100" class="is-light">
-                  <input
-                    matInput
-                    type="text"
-                    placeholder="Nama Produk"
-                    formControlName="name"
-                  />
-                  <mat-error
-                    *ngIf="
-                      formProductGroup.get('name').hasError('required') &&
-                      formProductGroup.get('name').touched
-                    "
-                  >
-                    Nama Produk harus diisi
-                  </mat-error>
-                </mat-form-field>
-
-                <mat-form-field fxFlex="100" class="is-light">
-                  <mat-label *ngIf="hasBarcode" >Barcode</mat-label>
-                  <input
-                    matInput
-                    disabled
-                    placeholder="Barcode"
-                    [value]="formProductGroup.get('barcode').value"
-                  />
-                </mat-form-field>
-
-                <mat-form-field *ngIf="!hasBarcode" fxFlex="100" class="is-light">
-                  <input
-                    matInput
-                    disabled
-                    placeholder="Harga Beli"
-                  />
-                </mat-form-field>
-                <mat-form-field *ngIf="hasBarcode"  fxFlex="100" class="is-light">
-                  <input
-                    matInput
-                    type="tel"
-                    currencyMask
-                    min="0"
-                    placeholder="Harga Beli"
-                    formControlName="purchase_price"
-                  />
-                  <mat-error
-                    *ngIf="
-                      (formProductGroup
-                        .get('purchase_price')
-                        .hasError('required') ||
-                        formProductGroup
-                          .get('purchase_price')
-                          .hasError('min')) &&
-                      formProductGroup.get('purchase_price').touched
-                    "
-                  >
-                    Harga Beli harus diisi
-                  </mat-error>
-                </mat-form-field>
-
-                <mat-form-field *ngIf="!hasBarcode" fxFlex="100" class="is-light">
-                  <input
-                    matInput
-                    disabled
-                    placeholder="Harga Jual"
-                  />
-                </mat-form-field>
-                <mat-form-field *ngIf="hasBarcode"  fxFlex="100" class="is-light">
-                  <input
-                    matInput
-                    type="tel"
-                    currencyMask
-                    min="0"
-                    placeholder="Harga Jual"
-                    formControlName="selling_price"
-                  />
-                  <mat-error
-                    *ngIf="
-                      (formProductGroup
-                        .get('selling_price')
-                        .hasError('required') ||
-                        formProductGroup
-                          .get('selling_price')
-                          .hasError('min')) &&
-                      formProductGroup.get('selling_price').touched
-                    "
-                  >
-                    Harga Jual harus diisi
-                  </mat-error>
-                </mat-form-field>
-              </div>
-            </div>
-          </mat-tab>
-        </mat-tab-group>
+        <div
+          fxLayout="column"
+          fxFlex="50"
+          fxLayoutAlign="start stretch"
+          fxLayoutGap="16px"
+        >
+          <div
+            class="button mb-32"
+            fxLayout="row wrap"
+            fxLayoutAlign="space-between center"
+            (click)="openDialog()"
+          >
+            <mat-icon class="secondary-text">horizontal_split</mat-icon>
+            <span class="h5 text-center">SCAN BARCODE</span>
+          </div>
+          <mat-form-field *ngIf="!hasBarcode" fxFlex="100" class="is-light">
+            <input matInput disabled placeholder="Nama Produk" />
+          </mat-form-field>
+          <mat-form-field *ngIf="hasBarcode" fxFlex="100" class="is-light">
+            <input
+              matInput
+              type="text"
+              placeholder="Nama Produk"
+              formControlName="name"
+            />
+            <mat-error
+              *ngIf="
+                formProductGroup.get('name').hasError('required') &&
+                formProductGroup.get('name').touched
+              "
+            >
+              Nama Produk harus diisi
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field fxFlex="100" class="is-light">
+            <mat-label *ngIf="hasBarcode">Barcode</mat-label>
+            <input
+              matInput
+              disabled
+              placeholder="Barcode"
+              [value]="formProductGroup.get('barcode').value"
+            />
+          </mat-form-field>
+          <mat-form-field *ngIf="!hasBarcode" fxFlex="100" class="is-light">
+            <input matInput disabled placeholder="Harga Beli" />
+          </mat-form-field>
+          <mat-form-field *ngIf="hasBarcode" fxFlex="100" class="is-light">
+            <input
+              matInput
+              type="tel"
+              currencyMask
+              min="0"
+              placeholder="Harga Beli"
+              formControlName="purchase_price"
+            />
+            <mat-error
+              *ngIf="
+                (formProductGroup.get('purchase_price').hasError('required') ||
+                  formProductGroup.get('purchase_price').hasError('min')) &&
+                formProductGroup.get('purchase_price').touched
+              "
+            >
+              Harga Beli harus diisi
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field *ngIf="!hasBarcode" fxFlex="100" class="is-light">
+            <input matInput disabled placeholder="Harga Jual" />
+          </mat-form-field>
+          <mat-form-field *ngIf="hasBarcode" fxFlex="100" class="is-light">
+            <input
+              matInput
+              type="tel"
+              currencyMask
+              min="0"
+              placeholder="Harga Jual"
+              formControlName="selling_price"
+            />
+            <mat-error
+              *ngIf="
+                (formProductGroup.get('selling_price').hasError('required') ||
+                  formProductGroup.get('selling_price').hasError('min')) &&
+                formProductGroup.get('selling_price').touched
+              "
+            >
+              Harga Jual harus diisi
+            </mat-error>
+          </mat-form-field>
+        </div>
       </form>
     </div>
   </div>
