--- a/src/app/pages/sku-management/product-cashier/submission/index/index.component.html
+++ b/src/app/pages/sku-management/product-cashier/submission/index/index.component.html
@@ -91,8 +91,8 @@
           ></ngx-datatable-column>
           <ngx-datatable-column
             [width]="100"
+            prop="in_databank"
             name="Ada di Databank?"
-            [sortable]="false"
           >
             <ng-template
               ngx-datatable-cell-template
